# bean-jmw

./: README.md  bci.py  bcr.py  pyproject.toml  yaml_util.py
.github/workflows/: python-app.yml
bean-jmw/: bci.py
bean-jmw/importers/filters/: assign.py
bean_jmw/: yaml_util.py
bean_jmw/importers/filters/: assign.py
bean_jmw/importers/qif/: qif_importer.py
beanjmw/: bal.py  bar.py  bci.py  bcr.css  bcr.py  dissect.py  example.sh  example_accts.py  example_ledgers.py  generate_reports.sh  plot_networth.py  plot_things.py  recent_net_worth.py  slate_download1234.csv  stage.py  yaml_util.py
beanjmw/importers/: importer_shared.py
beanjmw/importers/bc/: bc_ledger.py
beanjmw/importers/csv/: csv_general.py
beanjmw/importers/etrade/: etrade_csv.py  etrade_positions.py
beanjmw/importers/fido/: fido_csv.py  fido_positions.py
beanjmw/importers/filters/: assign.py
beanjmw/importers/newport/: newport_csv.py
beanjmw/importers/ofx/: ofx_general.py
beanjmw/importers/qif/: qif_importer.py
beanjmw/importers/vanguard/: vanguard_csv.py
importers/filters/: assign.py
importers/qif/: qif_importer.py
tests/: accts.py  discover6789.csv  discover6789.qif  etrade.csv  fidelity.csv  fido_pos.csv  importertest.py  test1.qfx  test1.qif  test2.qif  test3.qif  test_BofA.py  test_Csv.py  test_Disco.py  test_Etrade.py  test_Fido.py  test_OfxTransactions.py  test_ProcessEntries.py  test_QifImporter.py  test_QifTransactions.py  test_Vanguard.py  test_shared.py  vanguard.qfx  vanguard_scraped9999.csv
