[project]
name = "bean_jmw"
version = "0.1.0"
dependencies = [
    "qifparse@git+https://github.com/jmoonware/qifparse",
	"beancount==v2",
	"pyyaml",
    "numpy",
]
requires-python = "<3.10"
authors = [
    {name = "John A. Moon"},
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
