[project]
name = "beanjmw"
version = "0.1.0"
dependencies = [
    "qifparse@git+https://github.com/jmoonware/qifparse",
	"beancount==2.3.5",
	"pyyaml",
    "numpy",
	"scipy",
	"yfinance",
	"ofxparse",
	"requests",
	"matplotlib",
	"beautifulsoup4"
]
requires-python = "<3.10"
authors = [
    {name = "John A. Moon"},
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}
